# imaaronnicetomeetyou-me

./: .env  .gitignore  Cargo.toml  README.md  cdk.json  compose.yml  docker-compose.yml  go.sh  index.html  package-lock.json  package.json
.github/workflows/: general.yml
client/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  auth.ts  index.css  styled.d.ts
client/src/components/forms/inputs/Button/: index.tsx
client/src/components/forms/inputs/CheckBoxInput/: index.tsx
client/src/components/forms/inputs/TextInput/: index.spec.tsx  (+1 more)
client/src/models/: Blog.tsx
client/src/pages/BlogPage/: index.tsx
client/src/pages/BlogsPage/: index.tsx
client/src/pages/CreatePage/: index.tsx
client/src/pages/DefaultPage/: index.tsx
client/src/pages/LoginPage/: index.tsx
client/src/pages/ManagePage/: index.tsx
client/src/pages/Page/: index.tsx
client/src/pages/RegisterPage/: index.tsx
deploy/: package-lock.json  tsconfig.json
deploy/lib/: ApiStack.ts  StaticSiteStack.ts  site-stack.ts
deploy/test/: deploy.test.ts
server/: .gitignore  Dockerfile  build.gradle.kts  compose.yml  dev.dockerfile  settings.gradle.kts
server/gradle/wrapper/: gradle-wrapper.properties
server/src/main/resources/: logback.xml
src/: App.tsx  InkBlotBackground.tsx  NameCardBackground.css  NameCardBackground.tsx  index.css  main.rs
src/htmx/: admin.hbs  blog.hbs  index.hbs
src/htmx/assets/: admin.css  blog.css  common.css
src/htmx/partials/: blog-preview.hbs  common-head.hbs  header.hbs
support/database/: init.sql
(+36 files in other folders)
