[package]
name = "imaaronnicetomeetyou-me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros", "form"] }
askama = "0.11"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tower = { version = "0.4.13" }
serde = { version = "1.0", features = ["derive"] }
handlebars = "5.1.2"
itertools = "0.12.1"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }
